--- a/data/gabrielx/templates/usgs.html
+++ b/data/gabrielx/templates/usgs.html
@@ -1,6 +1,7 @@
 <div id="mapContainer" style="position: relative">
     <div id="map" style="width: 1250px; height: 700px"></div>
 </div>
+<script src="https://maps.googleapis.com/maps/api/js"></script>
 <script type="text/javascript">
   function resizeMap() {
       var map = document.getElementById('map');
