--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,10 @@
-.image-description { 
+.custom-navbar {
+    -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
+    -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
+}
+
+.image-description {
     display: inline-block;
 }
 .cell-description  { 
@@ -9,10 +15,6 @@
     display: inline;
 }
 
-.report-thumbnails {
-    margin-top: 2em;
-    overflow: hidden;
-}
 .report-thumbnail {
     display: block;
     clear: left;
@@ -38,4 +40,29 @@
 
 a img {
     border: 0px;
+}
+
+.report-summary-container {
+    margin-bottom: 1em;
+}
+
+.report-summary-name {
+    margin-bottom: 0;
+    margin-top: 0.25em;
+}
+
+.flow-list {
+    padding: 0;
+    margin: 0
+}
+
+.flow-list-item {
+    display: inline-block;
+    padding-right: 10px;
+    padding-top: 5px;
+    vertical-align: top;
+}
+
+.flow-floated-list-item {
+    float: left;
 }
