--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,7 @@
+.custom-blueimp {
+    color: #fff; /* Undo Bootstrap's CSS reset */
+}
+
 .custom-navbar {
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
