Partially convert report index & favorite photo pages to templates

--- a/perl/template/fragment/dropdown-button.html
+++ b/perl/template/fragment/dropdown-button.html
@@ -8,7 +8,7 @@
     Change Year
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-      <TMPL_LOOP NAME="items">
+      <TMPL_LOOP NAME="change_year_dropdown_items">
           <a class="dropdown-item" href="<TMPL_VAR NAME=url>"><TMPL_VAR NAME=text></a>
       </TMPL_LOOP>
   </div>
