--- a/css/site.css
+++ b/css/site.css
@@ -1,3 +1,12 @@
+.dropdown-header-title {
+    display: inline-block;
+}
+.dropdown-header-button {
+    display: inline-block;
+    padding-left: 1em;
+    vertical-align: text-bottom;
+}
+
 .custom-blueimp {
     color: #fff; /* Undo Bootstrap's CSS reset */
 }
