--- a/perl/template/fragment/dropdown-button.html
+++ b/perl/template/fragment/dropdown-button.html
@@ -9,7 +9,7 @@
   </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
       <TMPL_LOOP NAME="change_year_dropdown_items">
-          <a class="dropdown-item" href="<TMPL_VAR NAME=url>"><TMPL_VAR NAME=text></a>
+          <a class="dropdown-item" href="<TMPL_VAR ESCAPE="none" NAME="url">"><TMPL_VAR NAME="text"></a>
       </TMPL_LOOP>
   </div>
 </div>
