--- a/perl/template/image/favorites.html
+++ b/perl/template/image/favorites.html
@@ -1,6 +1,6 @@
 <TMPL_INCLUDE NAME="../fragment/heading-with-dropdown.html" />
 
-<TMPL_VAR NAME="images_html" />
+<TMPL_VAR ESCAPE="none" NAME="images_html" />
 <br clear="both" />
 
 <TMPL_INCLUDE NAME="../fragment/dropdown-button.html" />
