--- a/perl/template/report/index.html
+++ b/perl/template/report/index.html
@@ -1,6 +1,6 @@
 <TMPL_INCLUDE NAME="../fragment/heading-with-dropdown.html" />
 
-<TMPL_VAR NAME="body_html" />
+<TMPL_VAR ESCAPE="none" NAME="body_html" />
 <br />
 
 <TMPL_INCLUDE NAME="../fragment/dropdown-button.html" />
