--- a/css/site.css
+++ b/css/site.css
@@ -68,7 +68,9 @@ a img {
     padding: 0;
     margin: 0
 }
-
+ul.flow-list > li:first-of-type {
+    float: left;
+}
 .flow-list-item {
     display: inline-block;
     padding-right: 10px;
