--- a/perl/template/page.html
+++ b/perl/template/page.html
@@ -6,7 +6,7 @@
 
 <div style="margin: 5px">
   <TMPL_UNLESS NAME="no_title">
-    <h1><TMP_VAR NAME="title" /></h1>
+    <h1><TMPL_VAR NAME="title" /></h1>
   </TMPL_UNLESS>
 
   <TMPL_VAR ESCAPE="none" NAME="html" />
