Fix image flow bug on location, area & list pages

--- a/css/site.css
+++ b/css/site.css
@@ -68,7 +68,7 @@ a img {
     padding: 0;
     margin: 0
 }
-ul.flow-list > li:first-of-type {
+ul.floated-flow-list > li:first-of-type {
     float: left;
 }
 .flow-list-item {
