Fix broken map on usgs.html
Closes #3

--- a/templates/usgs.html
+++ b/templates/usgs.html
@@ -12,7 +12,7 @@
 
   window.addEventListener('resize', resizeMap);
   resizeMap();
-  Yellowleaf.Map.initializeOnLoad();
+  Yellowleaf_main.Map.initializeOnLoad();
 </script>
 
 
