--- a/perl/template/fragment/heading-with-dropdown.html
+++ b/perl/template/fragment/heading-with-dropdown.html
@@ -1,8 +1,8 @@
-<div>
-    <div class="dropdown-header-title">
-        <h1><TMPL_VAR NAME="title" /></h1>
-    </div>
-    <div class="dropdown-header-button">
-        <TMPL_INCLUDE NAME="dropdown-button.html" />
-    </div>
-</div>
+<h1>
+  <div class="dropdown-header-title">
+    <TMPL_VAR NAME="title" />
+  </div>
+  <div class="dropdown-header-button">
+    <TMPL_INCLUDE NAME="dropdown-button.html" />
+  </div>
+</h1>
