--- a/perl/template/report/index.html
+++ b/perl/template/report/index.html
@@ -3,7 +3,7 @@
   <head>
     <TMPL_INCLUDE NAME="../fragment/head.html" />
   </head>
-  <body style="width: 100%; margin: 0" bgcolor="#f6f6f6">
+  <body>
     <TMPL_INCLUDE NAME="../fragment/navbar.html" />
 
     <div class="container">
