--- a/css/site.css
+++ b/css/site.css
@@ -78,3 +78,7 @@ ul.floated-flow-list > li:first-of-type {
     padding-top: 5px;
     vertical-align: top;
 }
+
+.non-bootstrap-content {
+    margin-left: 15px;
+}
