--- a/perl/template/fragment/head.html
+++ b/perl/template/fragment/head.html
@@ -1,5 +1,22 @@
 <title><TMPL_VAR NAME="title" /></title>
-<link rel="SHORTCUT ICON" href="../../pics/favicon.ico" />
+
+<link rel="apple-touch-icon" sizes="57x57" href="../../pics/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="../../pics/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="../../pics/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="../../pics/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="../../pics/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="../../pics/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="../../pics/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="../../pics/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="../../pics/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="../../pics/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="../../pics/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="../../pics/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="../../pics/favicon-16x16.png">
+<link rel="manifest" href="../../pics/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="../../pics/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
 
 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
 <meta charset="utf-8">
