--- a/perl/template/fragment/navbar.html
+++ b/perl/template/fragment/navbar.html
@@ -6,6 +6,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-light custom-navbar"
      style="background-color: #DFF2FD;">
+  <a class="navbar-brand" href="../../g/m/home.html">
+    <img src="../../pics/ms-icon-144x144.png" width="30" height="30" alt="">
+  </a>
+
   <button class="navbar-toggler"
           type="button"
           data-toggle="collapse"
