--- a/perl/template/fragment/head.html
+++ b/perl/template/fragment/head.html
@@ -41,4 +41,8 @@
 </script>
 
 <script type="text/javascript" src="../js/main.js"></script>
-<script type="text/javascript" src="../js/async.js" async></script>
+
+<link rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous">
