--- a/javascript/src/site.css
+++ b/javascript/src/site.css
@@ -1,3 +1,10 @@
+.centered-spinner {
+    left: 50%;
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+}
+
 .dropdown-header-title {
     display: inline;
 }
