--- a/perl/template/usgs.html
+++ b/perl/template/usgs.html
@@ -1,5 +1,8 @@
 <div id="mapContainer" style="position: relative">
     <div id="map" style="width: 1250px; height: 700px"></div>
+    <div id="mapSpinner" class="centered-spinner spinner-border" role="status">
+      <span class="sr-only">Loading map...</span>
+    </div>
 </div>
 
 <script type="text/javascript" src="../js/main.js"></script>
