--- a/javascript/src/site.css
+++ b/javascript/src/site.css
@@ -21,6 +21,7 @@
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
+    margin-bottom: 10px;
 }
 
 .image-description {
