--- a/javascript/src/site.css
+++ b/javascript/src/site.css
@@ -17,6 +17,10 @@
     color: #fff; /* Undo Bootstrap's CSS reset */
 }
 
+.table-minimize-width {
+    width: auto !important;
+}
+
 .custom-navbar {
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.50);
