Convert the reference index to a template.

--- a/javascript/src/site.css
+++ b/javascript/src/site.css
@@ -92,3 +92,7 @@ ul.floated-flow-list > li:first-of-type {
 .non-bootstrap-content {
     margin-left: 15px;
 }
+
+.basic-list-item {
+    display: block;
+}
