Change image year button to an outline.
To match navbar search button.

--- a/perl/template/fragment/dropdown-button.html
+++ b/perl/template/fragment/dropdown-button.html
@@ -1,5 +1,5 @@
 <div class="dropright">
-  <button class="btn btn-secondary btn-sm dropdown-toggle"
+  <button class="btn btn-outline-secondary btn-sm dropdown-toggle"
           type="button"
           id="dropdownMenuButton"
           data-toggle="dropdown"
