--- a/view/report/index.html
+++ b/view/report/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <TMPL_INCLUDE NAME="../fragment/head.html" />
+    <TMPL_INCLUDE NAME="../shared/head.html" />
   </head>
   <body>
-    <TMPL_INCLUDE NAME="../fragment/navbar.html" />
+    <TMPL_INCLUDE NAME="../shared/navbar.html" />
 
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <TMPL_INCLUDE NAME="../fragment/heading-with-dropdown.html" />
+          <TMPL_INCLUDE NAME="../shared/heading-with-dropdown.html" />
         </div>
       </div>
 
@@ -47,8 +47,8 @@
       <div class="row">
         <div class="col-12">
           <br />
-          <TMPL_INCLUDE NAME="../fragment/dropdown-button.html" />
-          <TMPL_INCLUDE NAME="../fragment/foot.html" />
+          <TMPL_INCLUDE NAME="../shared/dropdown-button.html" />
+          <TMPL_INCLUDE NAME="../shared/foot.html" />
         </div>
       </div>
     </div>
