--- a/view/trip/index.html
+++ b/view/trip/index.html
@@ -13,13 +13,13 @@
         </div>
       </div>
 
-      <TMPL_LOOP NAME="reports">
+      <TMPL_LOOP NAME="trips">
         <div class="row">
           <div class="col-12">
-            <h2 class="report-summary-name">
+            <h2 class="trip-summary-name">
               <TMPL_VAR ESCAPE="none" NAME="name_html" />
             </h2>
-            <div class="report-summary-date">
+            <div class="trip-summary-date">
               <TMPL_VAR NAME="date" />
             </div>
           </div>
