Fix incorrect counties value on location page.

--- a/view/location/page.html
+++ b/view/location/page.html
@@ -29,7 +29,7 @@
 <tmpl_if name="counties">
   <div class="field-container">
     <div class="field-name">Counties:</div>
-    <div class="field-value"><tmpl_var name="recognizable_areas" /></div>
+    <div class="field-value"><tmpl_var name="counties" /></div>
   </div>
 </tmpl_if>
 
