Invalidate the JS/CSS browser cache on each deploy.
Assuming the PID of this build doesn't match the PID of the previous build...

This closes #4

--- a/view/shared/head.html
+++ b/view/shared/head.html
@@ -40,7 +40,9 @@
  })();
 </script>
 
-<script type="text/javascript" src="../js/main.js"></script>
+<script type="text/javascript"
+        src="../js/main.js?dr=<tmpl_var name='deploy_refresh' />">
+</script>
 
 <link rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
