--- a/view/shared/map.html
+++ b/view/shared/map.html
@@ -7,7 +7,7 @@
 
 <script>
   Yellowleaf_main.Map.initializeOnLoad();
-  <TMPL_LOOP name="inputs">
+  <TMPL_LOOP name="map_inputs">
     Yellowleaf_main.Map.setInput('<TMPL_VAR ESCAPE="js" NAME="name" />',
                                  <TMPL_VAR ESCAPE="none" NAME="value" />);
   </TMPL_LOOP>
