Convert more of trip page to a template.

--- a/view/trip/page.html
+++ b/view/trip/page.html
@@ -1,70 +1,29 @@
-<div class="field-container">
-  <div class="field-name">Date:</div>
-  <div class="field-value">
-    <tmpl_var name="start_date" />
-    <tmpl_if name="end_date">
-      to <tmpl_var name="end_date" />
-    </tmpl_if>
-  </div>
-</div>
-
-<tmpl_if name="short_time">
-  <div class="field-container">
-    <div class="field-name">Car-to-car:</div>
-    <div class="field-value"><tmpl_var name="short_time" /></div>
-  </div>
+<tmpl_if route_html>
+  <p>
+    <tmpl_var route_html escape=none />
+  </p>
 </tmpl_if>
 
-<tmpl_if name="distances_html">
-  <div class="field-container">
-    <div class="field-name">Round-trip distance:</div>
-    <div class="field-value"><tmpl_var escape="none" name="distances_html" /></div>
-  </div>
-</tmpl_if>
+<tmpl_loop sections>
+  <tmpl_if name>
+    <h2><tmpl_var name /></h2>
+  </tmpl_if>
 
-<tmpl_if name="elevation_gain">
-  <div class="field-container">
-    <div class="field-name">Elevation gain:</div>
-    <div class="field-value"><tmpl_var name="elevation_gain" /></div>
-  </div>
-</tmpl_if>
+  <tmpl_if start_date>
+    <li class="flow-list-item">
+      <tmpl_include page/info.html />
+    </li>
+  </tmpl_if>
 
-<div class="field-container">
-  <div class="field-name">Trip type:</div>
-  <div class="field-value"><tmpl_var name="trip_type" /></div>
-</div>
+  <tmpl_if map_inputs>
+    <li class="flow-list-item">
+      <tmpl_include ../shared/map.html />
+    </li>
+  </tmpl_if>
 
-<tmpl_if name="maps">
-  <div class="field-container">
-    <div class="field-name"><tmpl_var name="maps_title" />:</div>
-    <div class="field-value"><tmpl_var name="maps" /></div>
-  </div>
-</tmpl_if>
-
-<tmpl_if name="recognizable_areas">
-  <div class="field-container">
-    <div class="field-name">In:</div>
-    <div class="field-value"><tmpl_var name="recognizable_areas" /></div>
-  </div>
-</tmpl_if>
-
-<tmpl_if name="short_references_html">
-  <div class="field-container">
-    <div class="field-name">References:</div>
-    <div class="field-value"><tmpl_var escape="none" name="short_references_html" /></div>
-  </div>
-</tmpl_if>
-
-<tmpl_if name="detailed_times_html">
-  <div class="field-container">
-    <div class="field-name">Car-to-car:</div>
-    <div class="field-value"><tmpl_var escape="none" name="detailed_times_html" /></div>
-  </div>
-</tmpl_if>
-
-<tmpl_if name="detailed_references_html">
-  <div class="field-container">
-    <h2>References</h2>
-    <tmpl_var escape="none" name="detailed_references_html" />
-  </div>
-</tmpl_if>
+  <tmpl_loop images>
+    <li class="flow-list-item">
+      <tmpl_include ../image/single.html />
+    </li>
+  </tmpl_loop>
+</tmpl_loop>
