Fix broken videos.

--- a/view/image/single/video.html
+++ b/view/image/single/video.html
@@ -1,10 +1,10 @@
 <video width="320"
        height="180"
-       <tmpl_if enlarged_image_url>
-         poster="<tmpl_var video_poster_url escape=url />"
+       <tmpl_if video_poster_url>
+         poster="<tmpl_var video_poster_url escape=none />"
          preload="none"
        </tmpl_if>
        controls>
-  <source src="<tmpl_var video_url escape=none />"
+  <source src="<tmpl_var enlarged_image_url escape=none />"
           type="video/mp4" />
 </video>
