Rename image classes, templates, & template params

--- a/view/list/page.html
+++ b/view/list/page.html
@@ -35,9 +35,9 @@
     </li>
   </tmpl_if>
 
-  <tmpl_loop images>
+  <tmpl_loop pictures>
     <li class="flow-list-item">
-      <tmpl_include ../image/single.html />
+      <tmpl_include ../picture/single.html />
     </li>
   </tmpl_loop>
 </ul>
