--- a/view/picture/index.html
+++ b/view/picture/index.html
@@ -1,6 +1,6 @@
 <TMPL_INCLUDE NAME="../shared/heading-with-dropdown.html" />
 
-<TMPL_VAR ESCAPE="none" NAME="images_html" />
+<TMPL_VAR ESCAPE="none" NAME="pictures_html" />
 <br clear="both" />
 
 <TMPL_INCLUDE NAME="../shared/dropdown-button.html" />
