--- a/view/picture/single/video.html
+++ b/view/picture/single/video.html
@@ -5,6 +5,6 @@
          preload="none"
        </tmpl_if>
        controls>
-  <source src="<tmpl_var enlarged_image_url escape=none />"
+  <source src="<tmpl_var video_url escape=none />"
           type="video/mp4" />
 </video>
