--- a/view/trip/index.html
+++ b/view/trip/index.html
@@ -32,19 +32,19 @@
         </div>
 
         <div class="row">
-          <TMPL_IF NAME="image_html_1">
+          <TMPL_IF NAME="picture_html_1">
             <div class="col-lg-6 col-xl-4">
-              <TMPL_VAR ESCAPE="none" NAME="image_html_1" />
+              <TMPL_VAR ESCAPE="none" NAME="picture_html_1" />
             </div>
           </TMPL_IF>
-          <TMPL_IF NAME="image_html_2">
+          <TMPL_IF NAME="picture_html_2">
             <div class="d-none d-lg-block col-lg-6 col-xl-4">
-              <TMPL_VAR ESCAPE="none" NAME="image_html_2" />
+              <TMPL_VAR ESCAPE="none" NAME="picture_html_2" />
             </div>
           </TMPL_IF>
-          <TMPL_IF NAME="image_html_3">
+          <TMPL_IF NAME="picture_html_3">
             <div class="d-none d-xl-block col-xl-4">
-              <TMPL_VAR ESCAPE="none" NAME="image_html_3" />
+              <TMPL_VAR ESCAPE="none" NAME="picture_html_3" />
             </div>
           </TMPL_IF>
         </div>
